// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with displayNumber where there are more than one answer 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <sup>
    1
  </sup>
   
  <div
    className="e-color-black"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 e-font-size-m"
    >
      <b>
        1
      </b>
       / 6
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading and one censor scores 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-color-black"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 e-font-size-m"
    >
      <b>
        4
      </b>
       / 6
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      SE3
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      1.s
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      1
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading and three censor scores 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-color-black"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 e-font-size-m"
    >
      <b>
        4
      </b>
       / 6
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      SE3
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      3.s
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      3
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      SE2
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      2.s
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      2
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      SE1
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      1.s
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      1
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading score 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-color-black"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 e-font-size-m"
    >
      <b>
        1
      </b>
       / 6
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders with pregrading, censor and inspection scores 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-color-black"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 e-font-size-m"
    >
      <b>
        5
      </b>
       / 6
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      IN1, IN2
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      ta
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      4
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      SE3
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      3.s
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      3
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      SE2
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      2.s
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      2
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      SE1
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      1.s
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      1
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;

exports[`<ResultsExamQuestionManualScore /> fi-FI renders without score 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
/>
`;

exports[`<ResultsExamQuestionManualScore /> sv-FI renders with pregrading, censor and inspection scores 1`] = `
<div
  className="e-result-scorecount e-float-right e-mrg-b-1"
>
  <div
    className="e-color-black"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 e-font-size-m"
    >
      <b>
        5
      </b>
       / 6
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      IN1, IN2
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      ta
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      4
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      SE3
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      3.s
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      3
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      SE2
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      2.s
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      2
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      SE1
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      1.s
    </span>
  </div>
  <div
    className="e-color-grey"
  >
    <span
      className="e-font-size-xs e-mrg-r-1 false"
    >
      1
      
       p.
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 "
    >
      
    </span>
    <span
      className="e-font-size-xs e-mrg-r-1 e-mrg-r-0"
    >
      va
    </span>
  </div>
</div>
`;
